--- a/portfolio002.html
+++ b/portfolio002.html
@@ -28,6 +28,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Rubik+80s+Fade&display=swap" rel="stylesheet">
+    <!-- FONTAWSOME -->
+    <script src="https://kit.fontawesome.com/6d812f8390.js" crossorigin="anonymous"></script>
 
 </head>
 
