--- a/portfolio002.html
+++ b/portfolio002.html
@@ -38,16 +38,15 @@
     <header>
         <h1>Portfolio</h1>
             <img src="assets/Contáctanos.png" alt="contacto" type="button" id="contact-bttn"data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
-
-            <div class="alert alert-info d-none d-lg-block" id="menu-large">Resize your browser to show the responsive offcanvas toggle.</div>
-
             <div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasResponsiveLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">Responsive offcanvas</h5>
+                    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">Contáctanos</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                    <p class="mb-0">This is content within an <code>.offcanvas-lg</code>.</p>
+                    <a href="#">Email</a>
+                    <a href="#">instagram</a>
+                    <a href="#">Facebook</a>
                 </div>
             </div>
         
