commit 28oct IV

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Rubik+80s+Fade&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <!-- FONTAWSOME -->
     <script src="https://kit.fontawesome.com/6d812f8390.js" crossorigin="anonymous"></script>
     <!-- C S S -->
@@ -378,7 +381,7 @@
                     </div> 
                     <div class="carrusell-content">
                         <div class="carrusell-item">Administrativo técnico en la Dirección de Estadísticas e Investigaciones Económicas. 2010 - 2018 .</div>
-                        <div class="carrusell-item">Coordinador del ïndice de Precios al Consumidor. 2016 .</div>
+                        <div class="carrusell-item">Coordinador del índice de Precios al Consumidor. 2016 .</div>
                         <div class="carrusell-item">Procurador en Estudio Jurídico Petri. 2016 - 2020 .</div>
                         <div class="carrusell-item">Oficial de Justicia y Receptor <cursiva>Ad-Hoc</cursiva> en Estudio Jurídico y Recaudación FPSS. 2006 - 2011 .</div>
                         <div class="carrusell-item">Gestor Judicial en diversos estudios jurídicos. 2004 - 2006 .</div>
@@ -389,7 +392,7 @@
         </section>
 
     </main>
-    <footer><div>. FacuRini design .</div></footer>
+    <footer><div class="thefoo">. FacuRini design .</div></footer>
 
 </body>
 </html>
